AC_PREREQ(2.59)
AC_INIT(warewulf-monitor, 0.0.1, warewulf-devel@lbl.gov)
AC_CONFIG_SRCDIR([.])
AM_CONFIG_HEADER([config.h])

AC_PROG_INSTALL
AM_INIT_AUTOMAKE
AC_PROG_LIBTOOL
AC_PROG_CC

AC_PATH_PROG(PERLBIN, perl)
if test -z "$PERLBIN"; then
   AC_MSG_ERROR([perl not found])
fi
AC_SUBST(PERLBIN)

AC_CHECK_LIB(json, json_object_get,[CFLAGS="-ljson $CFLAGS"], [
echo "ERROR:  You need libjson to build Warewrlf Moniter module.";
echo "        Verify that you have libjson.a or libjson.so installed";
echo "        If it is in a different directory, try using";
echo "        the CFLAGS to set its proper path.";
              AC_MSG_ERROR([Fatal:  libjson not found.])])

AC_CHECK_LIB(sqlite3, sqlite3Init,[CFLAGS="-lsqlite3 $CFLAGS"], [
echo "ERROR:  You need libjson to build Warewrlf Moniter module.";
echo "        Verify that you have libsqlite.a or libsqlite.so installed";
echo "        If it is in a different directory, try using";
echo "        the CFLAGS to set its proper path.";
              AC_MSG_ERROR([Fatal:  libsqlite3 not found.])])


AC_MSG_CHECKING(for Perl vendor lib path)
eval `perl -V:installvendorlib`
PERL_VENDORLIB=$installvendorlib


AC_ARG_WITH(perllibdir, [  --with-perllibdir=path  Manually specify where the perl modules should go], [
if test -n "$withval" -a "x$withval" != "xno" ; then
   PERL_VENDORLIB=$withval
fi
],[CFLAGS="-g -std=gnu99 $CFLAGS"] )
AC_MSG_RESULT($PERL_VENDORLIB)
AC_SUBST(PERL_VENDORLIB)


AC_SUBST(PERLBIN)

AC_OUTPUT(Makefile
   warewulf-monitor.spec
   src/Makefile
   bin/Makefile
   lib/Makefile
   lib/Warewulf/Makefile
)

