AC_PREREQ(2.59)
AC_INIT(warewulf-monitor, 0.0.1, warewulf-devel@lbl.gov)
AC_CONFIG_SRCDIR([.])
AM_CONFIG_HEADER([config.h])

AC_PROG_INSTALL
AM_INIT_AUTOMAKE
AC_PROG_LIBTOOL
AC_PROG_CC

AC_PATH_PROG(PERLBIN, perl)
if test -z "$PERLBIN"; then
   AC_MSG_ERROR([perl not found])
fi
AC_SUBST(PERLBIN)

AC_CHECK_LIB(json, json_object_get,[LDFLAGS="-ljson $LDFLAGS"], [
echo "ERROR:  You need libjson to build Warewulf Moniter module.";
echo "        Verify that you have libjson.a or libjson.so installed";
echo "        If it is in a different directory, try using";
echo "        the LDFLAGS to set its proper path.";
              AC_MSG_ERROR([Fatal:  libjson not found.])])

sqlitefound="0";
# Check for sqlite 3.7
if test "x$sqlitefound" = "x0"; then
    AC_MSG_CHECKING(for SQLite)
    AC_CHECK_LIB(sqlite3, sqlite3Init,[LDFLAGS="-lsqlite3 $LDFLAGS" sqlitefound="1"], [])
fi

# Check For sqlite 3.6
if test "x$sqlitefound" = "x0"; then
    AC_MSG_CHECKING(for SQLite)
    AC_CHECK_LIB(sqlite3, sqlite3_initialize,[LDFLAGS="-lsqlite3 $LDFLAGS"], [
    echo "ERROR:  You need libsqlite3 to build Warewulf Moniter module.";
    echo "        Verify that you have libsqlite3.a or libsqlite3.so installed";
    echo "        If it is in a different directory, try using";
    echo "        the LDFLAGS to set its proper path.";
                  AC_MSG_ERROR([Fatal:  libsqlite3 not found.])])
fi

AC_MSG_CHECKING(for Perl vendor lib path)
eval `perl -V:installvendorlib`
PERL_VENDORLIB=$installvendorlib


AC_ARG_WITH(perllibdir, [  --with-perllibdir=path  Manually specify where the perl modules should go], [
if test -n "$withval" -a "x$withval" != "xno" ; then
   PERL_VENDORLIB=$withval
fi
],[CFLAGS="-g -std=gnu99 $CFLAGS"] )
AC_MSG_RESULT($PERL_VENDORLIB)
AC_SUBST(PERL_VENDORLIB)


AC_SUBST(PERLBIN)

AC_OUTPUT(Makefile
   warewulf-monitor.spec
   src/Makefile
   bin/Makefile
   etc/Makefile
   lib/Makefile
   lib/Warewulf/Makefile
)

