AC_PREREQ(2.59)
AC_INIT(warewulf-provision, 0.0.1, gmk@lbl.gov)
AC_CONFIG_SRCDIR([.])
AM_CONFIG_HEADER([config.h])

AC_PROG_INSTALL
AM_INIT_AUTOMAKE
AC_PROG_LIBTOOL
AC_PROG_CC

AC_PATH_PROG(PERLBIN, perl)
if test -z "$PERLBIN"; then
   AC_MSG_ERROR([perl not found])
fi
AC_SUBST(PERLBIN)

AC_MSG_CHECKING(for Perl vendor lib path)
eval `perl -V:installvendorlib`
PERL_VENDORLIB=$installvendorlib
AC_ARG_WITH(perllibdir, [  --with-perllibdir=path  Manually specify where the perl modules should go], [
if test -n "$withval" -a "x$withval" != "xno" ; then
   PERL_VENDORLIB=$withval
fi
])
AC_MSG_RESULT($PERL_VENDORLIB)
AC_SUBST(PERL_VENDORLIB)

AC_CHECK_LIB(fuse, fuse_main, , [
AC_MSG_ERROR([Fatal:  Fuse libraries not found.])
])

AC_EXPAND_DIR(fulldatadir, "$datadir")
AC_SUBST(fulldatadir)

AC_EXPAND_DIR(fulllibexecdir, "$libexecdir")
AC_SUBST(fulllibexecdir)

AC_EXPAND_DIR(fulllocalstatedir, "$localstatedir")
AC_SUBST(fulllocalstatedir)

AC_EXPAND_DIR(fulldatadir, "$datadir")
AC_SUBST(fulldatadir)

initramfsdir="$localstatedir/warewulf/initramfs/";
AC_SUBST(initramfsdir)


AC_SUBST(PERLBIN)

AC_OUTPUT(Makefile
   warewulf-provision.spec
   3rd_party/Makefile
   3rd_party/GPL/Makefile
   3rd_party/BSD/Makefile
   bin/Makefile
   cgi-bin/Makefile
   etc/Makefile
   etc/warewulf-httpd.conf
   initramfs/Makefile
   initramfs/capabilities/Makefile
   initramfs/capabilities/statelite/Makefile
   modules/Makefile
   share/Makefile
   lib/Makefile
   lib/Warewulf/Makefile
   lib/Warewulf/Provision/Include.pm
   lib/Warewulf/Provision/Makefile
)

