SUBDIRS =  HTML DataStore Module DSO

perlmodsdir = ${PERL_VENDORLIB}/Warewulf

dist_perlmods_SCRIPTS = Config.pm Daemon.pm DataStore.pm Debug.pm Include.pm Logger.pm Object.pm DSOFactory.pm ObjectSet.pm Util.pm Module.pm ModuleLoader.pm Term.pm EventHandler.pm Network.pm

MAINTAINERCLEANFILES = Makefile.in

