cgidir = $(datadir)/warewulf-legacy/web/cgi
imagedir = $(datadir)/warewulf-legacy/web/images

dist_cgi_SCRIPTS = warewulf.cgi
dist_cgi_DATA = template.html
dist_image_DATA = cluster-00.png cluster-100.png cluster-25.png cluster-50.png \
    cluster-75.png node-00.png node-10.png node-100.png node-20.png node-30.png \
    node-40.png node-50.png node-60.png node-70.png node-80.png node-90.png \
    node-dead.png node-error.png node-hidden.png node-idle.png node-over.png \
    node-unknown.png node-warn.png utilization-key.png warewulf-powered-small.png
